teacher_table_added

--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ VITE_DATABASE_ID=67444ed900245b48ebc5
 VITE_COLLECTION_ID_QUESTIONS=6746b68a0026a2062c0a
 VITE_COLLECTION_ID_SUBJECTS=subjects
 VITE_COLLECTION_ID_USERS=674d6b4600052954206c
+VITE_COLLECTION_ID_TEACHERS=6758994d0015dbf02395
